--- a/Stride/package.json
+++ b/Stride/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "https://Harinitech01.github.io/project",
   "name": "stride",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
